--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.6.1",
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4"
+    "react": "^16.3.1",
+    "react-native": "0.55.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
@@ -22,7 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "22.4.3",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.1"
   },
   "jest": {
     "preset": "react-native"
